--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "pwwpche",
   "license": "ISC",
   "dependencies": {
-    "anyproxy": "^4.0.4"
+    "anyproxy": "^4.0.4",
+    "uglify-js": "1.3.2"
   }
 }
